update githug pages

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <p>Douban.FM.crx 还在开发中，并木有发布到 Google Web Store 上，需要手动安装。安装方法：</p>
 
 <ol>
-<li>点击<a href="downloads/last.zip">这里</a>下载插件，并解压。</li>
-<li>在 Chrome 下打开<a>扩展程序</a>标签。</li>
+<li>点击<a href="https://github.com/shonenada/douban.fm.crx/zipball/master">这里</a>下载插件，并解压。</li>
+<li>在 Chrome 下打开<a href="chrome://extensions">扩展程序</a>标签。</li>
 <li>将 douban.fm.crx 拖进扩展程序标签。</li>
 </ol><h2>
 <a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
@@ -66,16 +66,16 @@
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-40537602-3");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+    <script type="text/javascript">
+      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+      try {
+        var pageTracker = _gat._getTracker("UA-40537602-3");
+        pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
 
   </body>
 </html>
