--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>Let's hack for douban.fm.</p>
 
-<p><img src="docs/images/preview.png" alt="Hack for douban.fm"></p>
+<p><img src="http://shonenada.github.io/douban.fm.crx/images/preview.png" alt="Hack for douban.fm"></p>
 
 <h2>
 <a name="introduction" class="anchor" href="#introduction"><span class="octicon octicon-link"></span></a>Introduction</h2>
@@ -48,8 +48,8 @@
 <p>Douban.FM.crx 还在开发中，并木有发布到 Google Web Store 上，需要手动安装。安装方法：</p>
 
 <ol>
-<li>点击<a href="https://github.com/shonenada/douban.fm.crx/zipball/master">这里</a>下载插件，并解压。</li>
-<li>在 Chrome 下打开<a href="chrome://extensions">扩展程序</a>标签。</li>
+<li>点击<a href="https://github.com/shonenada/douban.fm.crx/zipball/last">这里</a>下载插件，并解压。</li>
+<li>在 Chrome 下打开 <b>扩展程序</b> (在 Chrome 中打开：<code>chrome://extensions</code> )标签。</li>
 <li>将 douban.fm.crx 拖进扩展程序标签。</li>
 </ol><h2>
 <a name="contribution" class="anchor" href="#contribution"><span class="octicon octicon-link"></span></a>Contribution</h2>
